--- a/src/app/pages/portafolio/portafolio.component.html
+++ b/src/app/pages/portafolio/portafolio.component.html
@@ -1,4 +1,4 @@
-<section class="ae-container-fluid ae-container-fluid--inner rk-portfolio">
+<section class="animate__animated animate__fadeIn animate__slow ae-container-fluid ae-container-fluid--inner rk-portfolio">
   <div class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4">
 
     <a routerLink="/item" class="rk-item ae-masonry__item">
