--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -4,7 +4,7 @@
           <ul class="rk-menu rk-footer-menu">
             <li class="rk-menu__item"><a routerLink="about" class="rk-menu__link">About</a>
             </li>
-            <li class="rk-menu__item"><a href="contact.html" class="rk-menu__link">Contact</a>
+            <li class="rk-menu__item"><a href="mailTo:{{_info.info.email}}" class="rk-menu__link">Contact</a>
             </li>
           </ul>
           <p class="rk-footer__text rk-footer__copy "> <span class="ae-u-bold">© </span><span class="ae-u-bolder">{{anio}} Jose Luque portafolio </span>All Right Reserved.</p>
