--- a/src/assets/css/urku.css
+++ b/src/assets/css/urku.css
@@ -1333,8 +1333,10 @@ body {
 }
 .item-inside__meta .rk-portfolio-title,
 .item-inside__meta .rk-portfolio-category {
-  position: relative;
+  position: center;
   z-index: 2;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 1ex;
 }
 
 .inner-box-1 {
@@ -1357,7 +1359,7 @@ body {
 
 @media (min-width: 40em) {
   .item-inside-1 {
-    background-size: 150%;
+    background-size: 100%;
   }
 }
 
